--- a/annot/oa/hand.html
+++ b/annot/oa/hand.html
@@ -1,10 +1,5 @@
-<html>
-  <head>
-    <title>Annotations for "Hand in Hand; Strauss' Kaiser-Walzer as a case study for interdisciplinary collaboratio in Digital Musicology"</title>
-  </head>
-  <body>
-    <p>Annotations materials for "Hand in Hand; Strauss' Kaiser-Walzer as a case study for interdisciplinary collaboratio in Digital Musicology", a submission to the DSH DH2023 supplementary issue,
-     are in preparation and will be available shortly.
-    </p>
-  </body>
-</html>
+Annotations materials for "Hand in Hand; Strauss' Kaiser-Walzer as a case study 
+for interdisciplinary collaboratio in Digital Musicology", a submission to the 
+DSH DH2023 supplementary issue,are in preparation and will be available shortly 
+at this address. For more information on Signature Sound Vienna, see
+https://iwk.mdw.ac.at/signature-sound-vienna
